Fixing long description cutoff

--- a/src/Client/Pages/MoreLikeThis.razor.css
+++ b/src/Client/Pages/MoreLikeThis.razor.css
@@ -38,6 +38,10 @@
 
 .item-description {
   margin-bottom: 0;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
 }
 
 .item-subheader {
