--- a/src/Client/Pages/Search.razor.css
+++ b/src/Client/Pages/Search.razor.css
@@ -71,6 +71,10 @@
 
 .item-description {
   margin-bottom: 0;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
 }
 
 .item-subheader {
